Conversion to java 21 for testing purpose